--- a/index.html
+++ b/index.html
@@ -484,12 +484,12 @@
                 </div>
                 
                 <div class="view-control-group">
-                    <span class="view-label" onclick="setDirection(false)">左起</span>
+                    <span class="view-label" onclick="setDirection(false)">左起第1排</span>
                     <label class="switch">
                         <input type="checkbox" id="dirToggle">
                         <span class="slider"></span>
                     </label>
-                    <span class="view-label" onclick="setDirection(true)">右起</span>
+                    <span class="view-label" onclick="setDirection(true)">右起第1排</span>
                     
                     <div style="width:1px; height:20px; background:#ccc; margin:0 10px;"></div>
 
