--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>監考儀表板 v9.19 (統一右上角標籤版)</title>
+    <title>ExamDashboard</title> <!-- v9.19 (統一右上角標籤版) -->
     <style>
         :root {
             --c-grey:   #231F20;
